# telegram-bot-family-sports-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: README.md  bot.py  main.py  ocr.py  routes.py  strava_utils.py  sync.py
core/: README.md  config.py  scoring.py
db/: README.md  activity_weights.sql  schema.sql  supabase.py
